# diff

./: .coveragerc  .gitignore  Makefile  pyproject.toml  setup.py
.github/workflows/: python-package.yml
diff/: __init__.py  __main__.py  cli.py  diff.py  diff_data.py  file.py  output.py
diff/templates/: diff.css  diff.html  index.html
dir_diff_tool/: __init__.py  __main__.py  cli.py  diff.py  file.py  strip_ls.py
test/unit/: diff_test.py
