[tool.poetry]
name = "diff"
version = "0.1.0"
description = ""
authors = ["David Naumann <99202780+davidnaumann-bastian@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
